# nlp_tagging_ipmflow

./: .bash_history  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/projects/teamspace-studios-this-studio/agent-transcripts/2246c65a-8402-4bf2-82b5-f855157c5fa9/: 2246c65a-8402-4bf2-82b5-f855157c5fa9.jsonl
.cursor/projects/teamspace-studios-this-studio/agent-transcripts/c8b30aad-3c7f-483f-90e1-fe2994a6aac7/: c8b30aad-3c7f-483f-90e1-fe2994a6aac7.jsonl
.cursor/projects/teamspace-studios-this-studio/terminals/: 1.txt
.cursor/skills-cursor/: .sync-manifest.json
artifacts/: ipm_groq_eval.json  ipm_model_c_eval.json  ipm_model_d_eval.json  ipm_openai_eval.json
configs/: default.yaml  default.yaml.bak
dashboard/: index.html
dashboard/assets/fonts/: molde-expanded.css
data/processed/: ipm_dataset.json
data/splits/: seed42.json
scripts/: _bootstrap.py  evaluate.py  generate_data.py  predict.py  serve.py  train.py  tune_hyperparameters.py
src/ipmflow/: __init__.py  cli.py  config.py  device.py  paths.py  taxonomy.py
src/ipmflow/data/: __init__.py  generate.py  load.py  splits.py
src/ipmflow/eval/: benchmark.py  metrics.py
src/ipmflow/inference/: predict.py
src/ipmflow/llm/: prompts.py  providers.py
src/ipmflow/models/: __init__.py  distilbert.py  sklearn_tfidf.py
src/ipmflow/serve/: benchmark_api.py  server.py
