[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipmflow"
version = "0.2.0"
description = "Benchmark for automatic IPM Flow pitch tagging across LLM and ML models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.37.0",
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ipmflow-generate = "ipmflow.cli:generate"
ipmflow-train = "ipmflow.cli:train"
ipmflow-predict = "ipmflow.cli:predict"
ipmflow-evaluate = "ipmflow.cli:evaluate"
ipmflow-serve = "ipmflow.cli:serve"

[tool.setuptools.packages.find]
where = ["src"]
